Bug 322877 - Looks like a regression of the bug 36485 (button to select all cells)
Summary: Looks like a regression of the bug 36485 (button to select all cells)
Status: RESOLVED FIXED
Alias: None
Product: calligrasheets
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Sheets (KSpread) Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-27 10:08 UTC by Ganton
Modified: 2022-12-03 14:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ganton 2013-07-27 10:08:37 UTC
It looks like there was a regression of the [bug 36485](https://bugs.kde.org/show_bug.cgi?id=36485): The button to select all cells does not work, at least in KDE 4.10.5 under Kubuntu 13.04.

Thanks for Calligra! Keep up the good work!


Reproducible: Always
Comment 1 Andrew Crouthamel 2018-11-10 03:14:53 UTC
Dear Bug Submitter,

This bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? I am setting the status to NEEDSINFO pending your response, please change the Status back to REPORTED when you respond.

Thank you for helping us make KDE software even better for everyone!
Comment 2 Ganton 2018-11-14 17:52:26 UTC
There is no "select all" button, but it was previously (we can see the [bug 36485](https://bugs.kde.org/show_bug.cgi?id=36485)). It's confirmed using Calligra 3.1.0 under Kubuntu 18.10.
Comment 3 Justin Zobel 2022-12-03 09:01:21 UTC
Thank you for reporting this issue in KDE software. As it has been a while since this issue was reported, can we please ask you to see if you can reproduce the issue with a recent software version?

If you can reproduce the issue, please change the status to "REPORTED" when replying. Thank you!
Comment 4 Tomas Mecir 2022-12-03 14:00:33 UTC
Git commit 9d5a224af46f2851d98e8a3f4fb678610849c620 by Tomas Mecir.
Committed on 03/12/2022 at 14:00.
Pushed by mecir into branch 'master'.

Fix the select all button. Also fix a problem causing select all to be very slow.

M  +13   -2    sheets/core/Sheet.cpp
M  +2    -2    sheets/part/View.cpp

https://invent.kde.org/office/calligra/commit/9d5a224af46f2851d98e8a3f4fb678610849c620