Fix the select all button. Also fix a problem causing select all to be very slow.

BUG: 322877